WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163886
Activate WEB_RTC compilation flags for Mac bots
https://bugs.webkit.org/show_bug.cgi?id=163886
Summary
Activate WEB_RTC compilation flags for Mac bots
youenn fablet
Reported
2016-10-24 03:41:41 PDT
Activate WEB_RTC compilation flags for Mac bots
Attachments
Patch
(72.62 KB, patch)
2016-10-24 04:24 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews106 for mac-yosemite-wk2
(1.34 MB, application/zip)
2016-10-24 05:46 PDT
,
Build Bot
no flags
Details
Patch
(79.17 KB, patch)
2016-10-24 05:55 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(79.17 KB, patch)
2016-10-24 06:00 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2016-10-24 04:24:35 PDT
Created
attachment 292602
[details]
Patch
Build Bot
Comment 2
2016-10-24 05:46:53 PDT
Comment on
attachment 292602
[details]
Patch
Attachment 292602
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/2357638
New failing tests: svg/wicd/test-rightsizing-b.xhtml js/dom/global-constructors-attributes.html
Build Bot
Comment 3
2016-10-24 05:46:55 PDT
Created
attachment 292604
[details]
Archive of layout-test-results from ews106 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
youenn fablet
Comment 4
2016-10-24 05:55:36 PDT
Created
attachment 292605
[details]
Patch
WebKit Commit Bot
Comment 5
2016-10-24 05:57:22 PDT
Attachment 292605
[details]
did not pass style-queue: ERROR: LayoutTests/ChangeLog:8: Need whitespace between colon and description [changelog/filechangedescriptionwhitespace] [5] Total errors found: 1 in 21 files If any of these errors are false positives, please file a bug against check-webkit-style.
youenn fablet
Comment 6
2016-10-24 06:00:06 PDT
Created
attachment 292606
[details]
Patch
WebKit Commit Bot
Comment 7
2016-10-24 09:27:54 PDT
Comment on
attachment 292606
[details]
Patch Clearing flags on attachment: 292606 Committed
r207762
: <
http://trac.webkit.org/changeset/207762
>
WebKit Commit Bot
Comment 8
2016-10-24 09:27:58 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug