Activate WEB_RTC compilation flags for Mac bots https://bugs.webkit.org/show_bug.cgi?id=163886

Patch by Youenn Fablet <youenn@apple.com> on 2016-10-24
Reviewed by Eric Carlson.

Source/JavaScriptCore:

* Configurations/FeatureDefines.xcconfig:

Source/WebCore:

Covered by existing tests.

Fixing compilation errors due to missing WEBCORE_EXPORT, missing method and missing override keywords.

* Configurations/FeatureDefines.xcconfig:
* DerivedSources.make:
* Modules/mediastream/MediaEndpointPeerConnection.h:
* Modules/mediastream/RTCPeerConnection.h:
* Modules/mediastream/RTCPeerConnection.idl:
* Modules/mediastream/SDPProcessor.cpp:
(WebCore::SDPProcessor::generate):
(WebCore::SDPProcessor::parse):
* WebCore.xcodeproj/project.pbxproj:
* platform/mediastream/mac/MockRealtimeVideoSourceMac.mm:
(WebCore::MockRealtimeVideoSource::createMuted):

Source/WebKit/mac:

* Configurations/FeatureDefines.xcconfig:

Source/WebKit2:

* Configurations/FeatureDefines.xcconfig:

Tools:

* Scripts/webkitperl/FeatureList.pm:
* TestWebKitAPI/Configurations/FeatureDefines.xcconfig:

LayoutTests:

* platform/mac-yosemite/js/dom/global-constructors-attributes-expected.txt:
* platform/mac-wk1/js/dom/global-constructors-attributes-expected.txt:
* platform/mac/js/dom/global-constructors-attributes-expected.txt:

Canonical link: https://commits.webkit.org/181623@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207762 268f45cc-cd09-0410-ab3c-d52691b4dbfc