Source/WebCore/Modules/mediastream/RTCPeerConnection.h
@@ -30,8 +30,7 @@
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-#ifndef RTCPeerConnection_h
-#define RTCPeerConnection_h
+#pragma once
 
 #if ENABLE(WEB_RTC)
 
@@ -65,7 +64,7 @@ public:
 
     const Vector<RefPtr<RTCRtpSender>>& getSenders() const { return m_transceiverSet->getSenders(); }
     const Vector<RefPtr<RTCRtpReceiver>>& getReceivers() const { return m_transceiverSet->getReceivers(); }
-    const Vector<RefPtr<RTCRtpTransceiver>>& getTransceivers() const override { return m_transceiverSet->list(); }
+    const Vector<RefPtr<RTCRtpTransceiver>>& getTransceivers() const final { return m_transceiverSet->list(); }
 
     // Part of legacy MediaStream-based API (mostly implemented as JS built-ins)
     Vector<RefPtr<MediaStream>> getRemoteStreams() const { return m_backend->getRemoteStreams(); }
@@ -113,14 +112,14 @@ public:
     void close();
 
     // EventTarget
-    EventTargetInterface eventTargetInterface() const override { return RTCPeerConnectionEventTargetInterfaceType; }
-    ScriptExecutionContext* scriptExecutionContext() const override { return ActiveDOMObject::scriptExecutionContext(); }
+    EventTargetInterface eventTargetInterface() const final { return RTCPeerConnectionEventTargetInterfaceType; }
+    ScriptExecutionContext* scriptExecutionContext() const final { return ActiveDOMObject::scriptExecutionContext(); }
 
     using RefCounted<RTCPeerConnection>::ref;
     using RefCounted<RTCPeerConnection>::deref;
 
     // Used for testing with a mock
-    void emulatePlatformEvent(const String& action);
+    WEBCORE_EXPORT void emulatePlatformEvent(const String& action);
 
 private:
     RTCPeerConnection(ScriptExecutionContext&);
@@ -128,30 +127,30 @@ private:
     RefPtr<RTCRtpTransceiver> completeAddTransceiver(Ref<RTCRtpTransceiver>&&, const RtpTransceiverInit&);
 
     // EventTarget implementation.
-    void refEventTarget() override { ref(); }
-    void derefEventTarget() override { deref(); }
+    void refEventTarget() final { ref(); }
+    void derefEventTarget() final { deref(); }
 
     // ActiveDOMObject
-    void stop() override;
-    const char* activeDOMObjectName() const override;
-    bool canSuspendForDocumentSuspension() const override;
+    void stop() final;
+    const char* activeDOMObjectName() const final;
+    bool canSuspendForDocumentSuspension() const final;
 
     // PeerConnectionBackendClient
-    void addTransceiver(RefPtr<RTCRtpTransceiver>&&) override;
-    void setSignalingState(PeerConnectionStates::SignalingState) override;
-    void updateIceGatheringState(PeerConnectionStates::IceGatheringState) override;
-    void updateIceConnectionState(PeerConnectionStates::IceConnectionState) override;
+    void addTransceiver(RefPtr<RTCRtpTransceiver>&&) final;
+    void setSignalingState(PeerConnectionStates::SignalingState) final;
+    void updateIceGatheringState(PeerConnectionStates::IceGatheringState) final;
+    void updateIceConnectionState(PeerConnectionStates::IceConnectionState) final;
 
-    void scheduleNegotiationNeededEvent() override;
+    void scheduleNegotiationNeededEvent() final;
 
-    RTCRtpSenderClient& senderClient() { return *this; }
-    void fireEvent(Event&) override;
-    PeerConnectionStates::SignalingState internalSignalingState() const override { return m_signalingState; }
-    PeerConnectionStates::IceGatheringState internalIceGatheringState() const override { return m_iceGatheringState; }
-    PeerConnectionStates::IceConnectionState internalIceConnectionState() const override { return m_iceConnectionState; }
+    RTCRtpSenderClient& senderClient() final { return *this; }
+    void fireEvent(Event&) final;
+    PeerConnectionStates::SignalingState internalSignalingState() const final { return m_signalingState; }
+    PeerConnectionStates::IceGatheringState internalIceGatheringState() const final { return m_iceGatheringState; }
+    PeerConnectionStates::IceConnectionState internalIceConnectionState() const final { return m_iceConnectionState; }
 
     // RTCRtpSenderClient
-    void replaceTrack(RTCRtpSender&, RefPtr<MediaStreamTrack>&&, PeerConnection::VoidPromise&&) override;
+    void replaceTrack(RTCRtpSender&, RefPtr<MediaStreamTrack>&&, PeerConnection::VoidPromise&&) final;
 
     PeerConnectionStates::SignalingState m_signalingState { PeerConnectionStates::SignalingState::Stable };
     PeerConnectionStates::IceGatheringState m_iceGatheringState { PeerConnectionStates::IceGatheringState::New };
@@ -169,5 +168,3 @@ private:
 } // namespace WebCore
 
 #endif // ENABLE(WEB_RTC)
-
-#endif // RTCPeerConnection_h
